# shimadzu-uvvis-automation

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.toml  mcp-client.example.toml  pyproject.toml
.github/workflows/: test.yml
docs/: absorbance-correction.md  control-pc-acceptance.md  four-mode-methods.md  labsolutions-operation.md  mcp-server.md  profile-resolution.md  sample-batches.md  time-step-control.md  vendor-communication-and-manual-notes.md  wavelength-control.md
scripts/: build-control-pc-bundle.ps1  run-growth-series.ps1  run-test-measurement.ps1  setup-control-pc.ps1  test-live.ps1  test-simulator.ps1  uvvis.ps1
src/shimadzu_uvvis/: __init__.py  audit.py  batch_workflow.py  cli.py  client.py  configuration.py  diagnostics.py  locking.py  mcp_server.py  measurements.py  method_manager.py  profiles.py  results.py  runtime_manager.py  simulator.py
tests/: test_batch_workflow.py  test_cli.py  test_client.py  test_configuration.py  test_diagnostics.py  test_mcp_server.py  test_measurements.py  test_method_manager.py  test_profiles.py  test_results.py  test_runtime_manager.py
